REGRESSION (r185016): Intermittent crash in WebCore::TextTrackList::remove https://bugs.webkit.org/show_bug.cgi?id=146493 <rdar://problem/21511122>

Reviewed by Eric Carlson.

The m_textTracks member is frequently null checked during other operations, but
was not checked during track removal. This needs to be corrected.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::removeTextTrack): Check that m_textTracks is
not null before using it during track removal.


Canonical link: https://commits.webkit.org/164600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186181 268f45cc-cd09-0410-ab3c-d52691b4dbfc